--- a/page4.html
+++ b/page4.html
@@ -19,6 +19,8 @@ Tenha até 2500% de lucro.">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/animatecss/animate.min.css">
+  <link rel="stylesheet" href="assets/style.css">
+  <link rel="stylesheet" href="assets/slick.css">
   <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
   <link rel="stylesheet" href="assets/social-feed-plugin/jquery.socialfeed.css">
   <link rel="stylesheet" href="assets/social-feed-plugin/style.css">
@@ -83,7 +85,7 @@ Tenha até 2500% de lucro.">
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/u">bootstrap responsive templates</a></section><section class="cid-qVyW3c57IZ mbr-fullscreen mbr-parallax-background" id="header2-17">
+<section class="engine"><a href="https://mobirise.me/k">develop your own website</a></section><section class="cid-qVyW3c57IZ mbr-fullscreen mbr-parallax-background" id="header2-17">
 
     
 
@@ -202,16 +204,33 @@ Tenha até 2500% de lucro.">
     </div>
 </section>
 
+<section class="mbr-instagram-feed" data-rows="2" data-per-row-slider="" data-spacing="5" data-full-width="" data-token="4324100357.727bfe1.aad00a8caa8347b7ad5c9663374bda37" data-per-row-grid="4" id="instagram-feed-block-1k" data-rv-view="1355" style="background-image: url(assets/images/mbr-3-1620x1080.jpg); padding-top: 40px; padding-bottom: 40px;">
+    
+    <div class="container container_toggle">
+        <div class="row">
+            <div class="col">
+                <div class="inst">
+                    <h1 class="inst__title align-center mbr-fonts-style display-2">Instagram Feed</h1>
+                    <div class="inst__content"></div>
+                    <div class="inst__more mbr-section-btn align-center" buttons="0"><a class="btn btn-md btn-primary display-4" href="#" data-max-id="1776603219206504157_4324100357">Show more</a></div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
 
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/parallax/jarallax.min.js"></script>
-  <script src="assets/smoothscroll/smooth-scroll.js"></script>
-  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
+  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
+  <script src="assets/smoothscroll/smooth-scroll.js"></script>
+  <script src="assets/index.js"></script>
+  <script src="assets/slick.min.js"></script>
   <script src="assets/social-feed-plugin/codebird.min.js"></script>
   <script src="assets/social-feed-plugin/moment.js"></script>
   <script src="assets/social-feed-plugin/en-gb.js"></script>
