create github pages

--- a/page4.html
+++ b/page4.html
@@ -62,11 +62,11 @@ Tenha até 2500% de lucro.">
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="http://revendedor1406.v.cadastro.rio.br" target="_blank">
+                    <a href="http://revendedor1406.v.cadastro.rio.br">
                         <img src="assets/images/logo-1visionflex-122x49.png" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://mobirise.com">
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="http://revendedor1406.v.cadastro.rio.br/" target="_blank">
                         BUSCAAI 3.0</a></span>
             </div>
         </div>
@@ -85,7 +85,7 @@ Tenha até 2500% de lucro.">
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/k">develop own website</a></section><section class="cid-qVyW3c57IZ mbr-fullscreen mbr-parallax-background" id="header2-17">
+<section class="engine"><a href="https://mobirise.me/v">free html templates</a></section><section class="cid-qVyW3c57IZ mbr-fullscreen mbr-parallax-background" id="header2-17">
 
     
 
