--- a/page3.html
+++ b/page3.html
@@ -63,7 +63,7 @@ Tenha até 2500% de lucro.">
                         <img src="assets/images/logo-1visionflex-122x49.png" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://mobirise.com">
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="http://revendedor1406.v.cadastro.rio.br/" target="_blank">
                         BUSCAAI 3.0</a></span>
             </div>
         </div>
@@ -82,7 +82,7 @@ Tenha até 2500% de lucro.">
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/d">website maker</a></section><section class="cid-qVyjypqkuN mbr-fullscreen mbr-parallax-background" id="header2-y">
+<section class="engine"><a href="https://mobirise.me/m">site design templates</a></section><section class="cid-qVyjypqkuN mbr-fullscreen mbr-parallax-background" id="header2-y">
 
     
 
