--- a/revendedor1406-1.html
+++ b/revendedor1406-1.html
@@ -58,10 +58,10 @@ Tenha até 2500% de lucro.">
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="http://revendedor1406.v.cadastro.rio.br" target="_blank">
-                        <img src="assets/images/logo-1visionflex-122x49.png" alt="Mobirise" title="" style="height: 5.8rem;">
+                        <img src="assets/images/logo-1visionflex-122x49.png" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://mobirise.com">
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="http://revendedor1406.v.cadastro.rio.br/" target="_blank">
                         BUSCAAI 3.0</a></span>
             </div>
         </div>
@@ -80,7 +80,7 @@ Tenha até 2500% de lucro.">
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/u">bootstrap responsive templates</a></section><section class="cid-qVn5GjDrHo mbr-fullscreen mbr-parallax-background" id="header2-o">
+<section class="engine"><a href="https://mobirise.me/l">free web templates</a></section><section class="cid-qVn5GjDrHo mbr-fullscreen mbr-parallax-background" id="header2-o">
 
     
 
