--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ Tenha até 2500% de lucro.">
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="http://revendedor1406.v.cadastro.rio.br" target="_blank">
+                    <a href="http://revendedor1406.v.cadastro.rio.br">
                         <img src="assets/images/logo-1visionflex-122x49.png" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
@@ -82,7 +82,7 @@ Tenha até 2500% de lucro.">
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/w">free html5 templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.me/i">site creation software</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
