--- a/revendedor1406-1.html
+++ b/revendedor1406-1.html
@@ -57,7 +57,7 @@ Tenha até 2500% de lucro.">
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="http://revendedor1406.v.cadastro.rio.br" target="_blank">
+                    <a href="http://revendedor1406.v.cadastro.rio.br">
                         <img src="assets/images/logo-1visionflex-122x49.png" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
@@ -80,7 +80,7 @@ Tenha até 2500% de lucro.">
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/l">free web templates</a></section><section class="cid-qVn5GjDrHo mbr-fullscreen mbr-parallax-background" id="header2-o">
+<section class="engine"><a href="https://mobirise.me/s">free bootstrap theme</a></section><section class="cid-qVn5GjDrHo mbr-fullscreen mbr-parallax-background" id="header2-o">
 
     
 
